# tool-use-bench

./: .env.example  .gitignore  README.md  pyproject.toml
analysis/: example_report.md  report_schema.md
benchmark_samples/: full_benchmark.json
benchmark_samples/tool_calling/: 0001_weather_current.json  0002_calendar_search.json  0003_current_time_tokyo.json  0004_calculator_simple.json  0005_currency_conversion.json  0006_unit_conversion.json  0007_web_search_basic.json  0008_contact_lookup.json  0009_email_search_unread.json  0010_file_search_pdf.json  0011_document_retrieval.json  0012_github_pr_lookup.json  0013_slack_message.json  0014_reminder_creation.json  0015_geocode_address.json  0016_restaurant_search.json  0017_database_query.json  0018_code_execution.json  0019_refund_lookup.json  0020_hotel_search.json  0021_event_and_reminder.json  0022_email_search_and_draft.json  0023_github_issue_and_slack.json  0024_crm_and_ticket.json  0025_flight_and_hotel.json  0026_geocode_and_weather.json  0027_db_and_spreadsheet.json  0028_time_and_event.json  0029_files_and_document.json  0030_weather_three_cities.json  0031_currency_three_targets.json  0032_time_three_zones.json  0033_geocode_two_addresses.json  0034_web_search_two_topics.json  0035_github_three_prs.json  (+32 more)
examples/: config.azure.example.json  config.example.json  config.openai_compatible.example.json  config.vertex.example.json
prompts/: default_system_prompt.txt
tests/: test_checkpoint_resume.py  test_provider_normalization.py  test_report_generation.py  test_sample_validation.py  test_scoring.py
(+25 files in other folders)
